...
                                                        </view>
                                                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="w2i-xD-JWQ" userLabel="Number Field">
                                                            <rect key="frame" x="88.5" y="0.0" width="285.5" height="58"/>
                                                            <subviews>
                                                                <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Phone Number" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="kmq-Fw-dnQ">
                                                                    <rect key="frame" x="8" y="14" width="267.5" height="30"/>
                                                                    <accessibility key="accessibilityConfiguration" identifier="loginPhoneNoTextField"/>
                                                                    <color key="textColor" red="0.16862745100000001" green="0.16862745100000001" blue="0.16862745100000001" alpha="1" colorSpace="calibratedRGB"/>
                                                                    <fontDescription key="fontDescription" name="Poppins-Regular" family="Poppins" pointSize="16"/>
                                                                    <textInputTraits key="textInputTraits" keyboardType="phonePad"/>
                                                                    <userDefinedRuntimeAttributes>
                                                                        <userDefinedRuntimeAttribute type="color" keyPath="placeholderLabel.textColor">
                                                                            <color key="value" name="inactiveGrey"/>
...
                                                                <constraint firstAttribute="width" constant="20" id="eOV-R1-wpw"/>
                                                                <constraint firstAttribute="width" secondItem="YNY-x0-eRw" secondAttribute="height" multiplier="1:1" id="lQm-BX-XFm"/>
                                                            </constraints>
                                                        </imageView>
                                                        <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="kvs-TZ-TcJ">
                                                            <rect key="frame" x="46" y="14" width="318" height="30"/>
                                                            <accessibility key="accessibilityConfiguration" identifier="loginPasswordTextField"/>
                                                            <color key="textColor" red="0.16862745100000001" green="0.16862745100000001" blue="0.16862745100000001" alpha="1" colorSpace="calibratedRGB"/>
                                                            <fontDescription key="fontDescription" name="Poppins-Regular" family="Poppins" pointSize="16"/>
                                                            <textInputTraits key="textInputTraits" secureTextEntry="YES" textContentType="password"/>
                                                            <userDefinedRuntimeAttributes>
                                                                <userDefinedRuntimeAttribute type="color" keyPath="placeholderLabel.textColor">
                                                                    <color key="value" name="inactiveGrey"/>
...
                                                            <color key="backgroundColor" name="themeColor"/>
                                                            <accessibility key="accessibilityConfiguration" identifier="loginBtn"/>
                                                            <constraints>
                                                                <constraint firstAttribute="height" constant="58" id="1QP-5h-Msv"/>
                                                            </constraints>
                                                            <fontDescription key="fontDescription" name="Poppins-Medium" family="Poppins" pointSize="16"/>
                                                            <state key="normal" title="Login"/>
                                                            <userDefinedRuntimeAttributes>
                                                                <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
                                                                    <real key="value" value="4"/>
                                                                </userDefinedRuntimeAttribute>
                                                            </userDefinedRuntimeAttributes>
                                                            <connections>
...
                                                                    <fontDescription key="fontDescription" name="Poppins-Regular" family="Poppins" pointSize="14"/>
                                                                    <color key="textColor" name="secondaryText"/>
                                                                    <nil key="highlightedColor"/>
                                                                </label>
                                                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="QWy-pY-O4d">
                                                                    <rect key="frame" x="170.5" y="0.0" width="54" height="32"/>
                                                                    <accessibility key="accessibilityConfiguration" identifier="SignupBtn"/>
                                                                    <fontDescription key="fontDescription" name="Poppins-Medium" family="Poppins" pointSize="14"/>
                                                                    <state key="normal" title="Sign Up">
                                                                        <color key="titleColor" name="themeColor"/>
                                                                    </state>
                                                                    <connections>
                                                                        <action selector="signupButtonPressed:" destination="-1" eventType="touchUpInside" id="74w-s7-vg9"/>
                                                                    </connections>
                                                                </button>
...
