...
struct FireBaseVariables {
    static var fireBaseToken = ""
}

enum OnboardingType : String
{
    case SignUp = "Send Code"
    case forgotPass = "Reset My Password"
    
    var FinalViewText : String {
        
        switch self {
        case .SignUp:
...
